--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         
     </main>
 
-    <footer class="container p-4">
+    <footer class="container p-4" id="Lates-Course">
 
         <h3>Lates Course</h3>
 
